tweak code to avoid double border between Menu and parent !MenuBar/!ComboBox, refs #10527
git-svn-id: http://svn.dojotoolkit.org/src/dijit/trunk@22286 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/themes/claro/Menu.css
+++ b/themes/claro/Menu.css
@@ -45,7 +45,9 @@ There are three areas of styling for the Menu:
 	background-repeat:repeat-y;
 	background-color:#fff;
 	border: 1px solid #769dc0;
-	margin-top: -2px;
+
+	/* so adjoining borders of MenuBar/ComboBox and Menu overlap, avoiding double border */
+	margin: -1px 0;
 }
 .claro .dijitMenuBar .dijitMenuItem {  
 	padding: 6px 10px 7px;
